--- a/main.html
+++ b/main.html
@@ -59,8 +59,15 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h3>BENEFITS</h3>
+          <ul id="list">
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit.</li>
+          </ul>
 			</div>
+			<button type="button" value="ADD TO CART">ADD TO CART</button>
 		</div>
 	</section>
 </body>
